# gbfs-json-schema

./: .gitignore  Cargo.toml  README.md  free_bike_status  free_bike_status.json  gbfs  gbfs.json  gbfs_versions  gbfs_versions.json  geofencing_zones  geofencing_zones.json  package.json  pom.xml  renovate.json  station_information  station_information.json  station_status  station_status.json  system_alerts  system_alerts.json  system_calendar  system_calendar.json  system_hours  system_hours.json  system_information  system_information.json  system_pricing_plans  system_pricing_plans.json  system_regions  system_regions.json  vehicle_types  vehicle_types.json
.circleci/: config.yml
.devcontainer/: devcontainer.json
common/: definitions.json  timezones.json
example/: free_vehicle_status.json  station_information.json
gbfs-java-model/: .gitignore  pom.xml
models/rust/: Cargo.toml  README.md
models/rust/src/: lib.rs
models/rust/src/3.0/files/: gbfs.rs  manifest.rs  system_information.rs  system_pricing_plans.rs  system_regions.rs  vehicle_status.rs  vehicle_types.rs
models/rust/src/3.0/files/examples/specification/: geofencing_zones.json  station_information-1.json  station_information-2.json  system_alerts.json  system_information-1.json  system_pricing_plans-1.json  system_pricing_plans-2.json  system_regions.json  vehicle_status-2.json  vehicle_types.json
models/rust/src/3.1_RC2/: mod.rs  types.rs  urls.rs
models/rust/src/3.1_RC2/files/: gbfs.rs  gbfs_versions.rs  geofencing_zones.rs  manifest.rs  mod.rs  station_information.rs  station_status.rs  system_alerts.rs  system_information.rs  system_pricing_plans.rs  system_regions.rs  vehicle_availability.rs  vehicle_status.rs  vehicle_types.rs
models/rust/src/3.1_RC2/files/examples/specification/: gbfs.json  gbfs_versions.json  geofencing_zones.json  manifest.json  station_information-1.json  station_information-2.json  station_information-3.json  station_status.json  system_alerts.json  system_information-1.json  system_information-2.json  system_pricing_plans-1.json  system_pricing_plans-2.json  system_regions.json  vehicle_availability.json  vehicle_status-1.json  vehicle_status-2.json  vehicle_types.json
openapi/: v23.yaml
rule-factory/: pom.xml
scripts/: copyright.txt  generate_go_models.sh  generate_typescript_models.sh  package-lock.json  package.json
src/: lib.rs
testFixtures/: README.md
tests/: requirements.txt
v1.0/: free_bike_status.json  gbfs.json  station_information.json  station_status.json  system_alerts.json  system_calendar.json  system_hours.json  system_information.json  system_pricing_plans.json  system_regions.json
v1.1/: free_bike_status.json  gbfs.json  gbfs_versions.json  station_information.json  station_status.json  system_alerts.json  system_calendar.json  system_hours.json  system_information.json  system_pricing_plans.json  system_regions.json
v2.0/: free_bike_status  free_bike_status.json  gbfs  gbfs.json  gbfs_versions  gbfs_versions.json  station_information  system_alerts  (+14 more)
v2.0-RC/: system_information.json
(+687 files in other folders)
