[package]
name = "gbfs_types"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
description = "Types for GBFS"
authors = ["MobilityData <it@mobilitydata.org>", "Tom Delmas <tom.delmas@fluctuo.com>"]
repository = "https://github.com/MobilityData/gbfs-json-schema"
homepage = "https://github.com/MobilityData/gbfs-json-schema/tree/master/models/rust"
keywords = ["gbfs", "types"]
categories = ["api-bindings"]
readme = "README.md"

[features]
default = ["reqwest_blocking", "pyo3", "napi"]
reqwest_blocking = ["reqwest/blocking"]
pyo3 = ["dep:pyo3"]
napi = ["dep:napi", "dep:napi-derive"]

[dev-dependencies]
pretty_assertions = "1.4"

[dependencies]
futures = "0.3"
http = "1.3"
serde_json = "1.0"
serde_with = "3.13"
url = "2.5"
url_serde = "0.2"

[dependencies.geo-types]
version = "0.7"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.reqwest]
version = "0.12"
features = ["json"]

[dependencies.napi]
version = "2.16"
default-features = false
features = ["napi6"]
optional = true

[dependencies.napi-derive]
version = "2.16"
optional = true

[dependencies.pyo3]
version = "0.25"
features = ["serde"]
optional = true
